--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,1 +1,7 @@
-//$text-size: 12px;
+$button-color: #30488f; //anche per i link
+$button-color-hover:#233569;
+
+$fonts-color: #58402c;
+
+$section-color-main: white;
+$section-color-alternative: #ffe7d2;
