--- a/src/app.scss
+++ b/src/app.scss
@@ -6,13 +6,13 @@
 @import "_section3";
 @import "_footer";
 
+html {
+  font-size: 16px;
+}
+
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-.container-fluid {
-  max-width: 1100px;
-  margin: auto;
+  color: $fonts-color;
 }
