--- a/src/app.scss
+++ b/src/app.scss
@@ -8,11 +8,12 @@
 
 html {
   font-size: 16px;
+  font-family: 'Source Sans Pro', sans-serif;
+  color: $fonts-color;
 }
 
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: $fonts-color;
 }
