--- a/src/_section2.scss
+++ b/src/_section2.scss
@@ -1,15 +1,23 @@
 .section2 {
   @include debug-border;
+  padding: 100px 0;
 
   .section2-content {
     @include debug-border;
     display: flex;
+    padding: 50px 0;
 
     .content-left {
       @include debug-border;
       width: 50%;
       flex-shrink: 0;
       min-height: 150px;
+      text-align: right;
+
+      img {
+        max-width: 80%;
+        height: auto;
+      }
     }
 
     .content-right {
@@ -17,6 +25,35 @@
       width: 50%;
       flex-shrink: 0;
       min-height: 150px;
+
+      .text {
+        width: 50%;
+
+        h1 {
+          font-size: 3rem;
+        }
+
+        h4 {
+          font-size: 1.5rem;
+          font-weight: normal;
+        }
+
+        h4 a {
+          color: $button-color;
+        }
+
+        h4 a i {
+          font-size: 1rem;
+        }
+
+        .img_container {
+          text-align: center;
+          img {
+            width: 270px;
+          }
+        }
+      }
+
     }
   }
 }
