--- a/src/_section3.scss
+++ b/src/_section3.scss
@@ -15,14 +15,13 @@
     border: 1px solid $section-border-bottom;
     border-radius: 6px;
     background-color: white;
-    padding: 40px;
-    padding-bottom: 20px;
+    padding: 20px 40px;
     margin-bottom: 40px;
     text-align: left;
     position: relative;
 
     .quote-text {
-      margin: 35px 0 15px 0;
+      margin-bottom: 15px;
     }
 
     .virgoletta-quote {
