modifiche richieste fatte

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,8 +1,9 @@
-$button-color: #30488f; //anche per i link
-$button-color-hover:#233569;
+$button-color: #0E14EE; //anche per i link
+$button-color-hover:#7F14D4;
 
-$fonts-color: #58402c;
+$fonts-color: #4466D4;
 
 $section-color-main: white;
-$section-color-alternative: #ffe7d2;
+$section-color-alternative: #040F0F;
+
 $section-border-bottom: #bdb5af;
